dacast output type

--- a/plugins/rtmp-services/CMakeLists.txt
+++ b/plugins/rtmp-services/CMakeLists.txt
@@ -6,10 +6,13 @@ set(rtmp-services_SOURCES
 	twitch.c
 	rtmp-common.c
 	rtmp-custom.c
+	rtmp-dacast.c 
+	dacast-utils.c
 	rtmp-services-main.c)
 
 set(rtmp-services_HEADERS
 	twitch.h
+	dacast-utils.h
 	rtmp-format-ver.h)
 
 set(RTMP_SERVICES_URL
